# bmc_video_windows

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
example/: main.dart
lib/: bmc_video_windows.dart  bmc_video_windows_bindings_generated.dart
src/: CMakeLists.txt  bmc_video_windows.c  bmc_video_windows.h
windows/: CMakeLists.txt
